fix: complite hw
