# ClinicService/ClinicService_1/ClinicService/Controllers/ClientController.cs
@@ -1,9 +1,10 @@
 ﻿using ClinicService.Models.Requests;
 using ClinicService.Models;
 using ClinicService.Services;
-using ClinicService.Services.Impl;
+using ClinicService.Services.Implementation;
 using Microsoft.AspNetCore.Http;
 using Microsoft.AspNetCore.Mvc;
+using Swashbuckle.AspNetCore.Annotations;
 
 namespace ClinicService.Controllers
 {
@@ -12,57 +13,65 @@ namespace ClinicService.Controllers
     public class ClientController : ControllerBase
     {
 
-        private IClientRepository _clientRepository;
+        private readonly IClientRepository _clientRepository;
 
         public ClientController(IClientRepository clientRepository)
         {
             _clientRepository = clientRepository;
         }
 
-        [HttpPost("create", Name = "ClientCreate")]
+        [HttpPost("create")]
+        [SwaggerOperation(OperationId = "ClientCreate")]
         public ActionResult<int> Create([FromBody] CreateClientRequest createRequest)
         {
-            Client client = new Client();
-            client.Document = createRequest.Document;
-            client.SurName = createRequest.SurName;
-            client.FirstName = createRequest.FirstName;
-            client.Patronymic = createRequest.Patronymic;
-            client.Birthday = createRequest.Birthday;
-            return Ok(_clientRepository.Create(client));
+            int res = _clientRepository.Create(new Client
+            {
+                Document = createRequest.Document,
+                SurName = createRequest.SurName,
+                FirstName = createRequest.FirstName,
+                Patronymic = createRequest.Patronymic,
+                Birthday = createRequest.Birthday,
+            });
+            return Ok(res);
         }
 
-        [HttpPut("edit", Name = "ClientUpdate")]
+        [HttpPut("update")]
+        [SwaggerOperation(OperationId = "ClientUpdate")]
         public ActionResult<int> Update([FromBody] UpdateClientRequest updateRequest)
         {
-            Client client = new Client();
-            client.ClientId = updateRequest.ClientId;
-            client.Document = updateRequest.Document;
-            client.SurName = updateRequest.SurName;
-            client.FirstName = updateRequest.FirstName;
-            client.Patronymic = updateRequest.Patronymic;
-            client.Birthday = updateRequest.Birthday;
-            return Ok(_clientRepository.Update(client));
+            int res = _clientRepository.Update(new Client
+            {
+                ClientId = updateRequest.ClientId,
+                SurName = updateRequest.SurName,
+                FirstName = updateRequest.FirstName,
+                Patronymic = updateRequest.Patronymic,
+                Birthday = updateRequest.Birthday,
+                Document = updateRequest.Document,
+            });
+            return Ok(res);
         }
 
-
-        [HttpDelete("delete", Name = "ClientDelete")]
+        [HttpDelete("delete")]
+        [SwaggerOperation(OperationId = "ClientDelete")]
         public ActionResult<int> Delete([FromQuery] int clientId)
         {
             int res = _clientRepository.Delete(clientId);
             return Ok(res);
         }
 
-        [HttpGet("get-all", Name = "ClientGetAll")]
+        [HttpGet("get-all")]
+        [SwaggerOperation(OperationId = "ClientGetAll")]
         public ActionResult<List<Client>> GetAll()
         {
             return Ok(_clientRepository.GetAll());
         }
 
-        [HttpGet("get/{clientId}", Name = "ClientGetById")]
+
+        [HttpGet("get/{clientId}")]
+        [SwaggerOperation(OperationId = "ClientGetById")]
         public ActionResult<Client> GetById([FromRoute] int clientId)
         {
             return Ok(_clientRepository.GetById(clientId));
         }
-
     }
 }
